# cliview

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  mise.toml
.github/workflows/: ci.yml  release.yml
crates/cliview/: Cargo.toml  build.rs
crates/cliview/src/: assets.rs  error.rs  handler.rs  lib.rs  registry.rs  server.rs
crates/cliview/tests/: handlers.rs
examples/demo-cli/: Cargo.toml
examples/demo-cli/src/: main.rs
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts
frontend/src/lib/components/: ActionRunner.svelte  AutoForm.svelte  AutoView.svelte  DataTable.svelte  KeyValue.svelte  LogStream.svelte
frontend/src/routes/: +page.svelte
skills/cliview-rust-cli/: SKILL.md
