[workspace]
resolver = "2"
members = ["crates/cliview", "examples/demo-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cendryon-technology/cliview"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
async-trait = "0.1"
open = "5"
