[package]
name = "cliview"
description = "Turn your Rust CLI into a local web app with one line"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cli", "web", "ui", "axum", "sse"]
categories = ["command-line-interface", "web-programming::http-server", "gui"]
include = [
    "src/**/*",
    "tests/**/*",
    "build.rs",
    "frontend/dist/**/*",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
open = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
